# ChangeLog for x11-plugins/wmfsm
# Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmfsm/ChangeLog,v 1.15 2014/09/01 21:18:24 voyageur Exp $

*wmfsm-0.34-r2 (01 Sep 2014)

  01 Sep 2014; Bernard Cafarelli <voyageur@gentoo.org> wmfsm-0.34-r1.ebuild,
  +wmfsm-0.34-r2.ebuild, files/wmfsm-0.34.linux-fs.patch:
  EAPI bump, ebuild cleanup, fix compilation. Replace einstall with emake
  install, bug #521680

  15 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> wmfsm-0.34-r1.ebuild:
  Update HOMEPAGE and SRC_URI, thanks Lorenz in bug #394607

  26 May 2011; Michele Noberasco <s4t4n@gentoo.org> wmfsm-0.34-r1.ebuild:
  Fixed HOMEPAGE and SRC_URI. Closes bug #367173.

  04 Jun 2009; Tiago Cunha <tcunha@gentoo.org> wmfsm-0.34-r1.ebuild:
  stable sparc, bug 215651

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; wmfsm-0.34-r1.ebuild:
  Drop virtual/x11 references.

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  24 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> -wmfsm-0.34.ebuild,
  wmfsm-0.34-r1.ebuild:
  Fixed DEPEND for modular X.

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org> wmfsm-0.34-r1.ebuild:
  Stable on amd64.

  04 Sep 2004; Michele Noberasco <s4t4n@gentoo.org> wmfsm-0.34-r1.ebuild:
  Stable for x86.

  02 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  wmfsm-0.34-r1.ebuild:
  Masked wmfsm-0.34-r1.ebuild stable for ppc

*wmfsm-0.34-r1 (17 Jul 2004)

  17 Jul 2004; Michele Noberasco <s4t4n@gentoo.org> wmfsm-0.34-r1.ebuild:
  Revision bump, this one sports updated HOMEPAGE and SRC_URI, install
  some documentation, patch to hide 'system' file systems. Closes #50148.
  wmfsm-0.34.ebuild:
  update HOMEPAGE and SRC_URI.

  24 Sep 2003; Jason Wever <weeve@gentoo.org> wmfsm-0.34.ebuild:
  Added ~sparc keyword.

*wmfsm-0.34 (04 Oct 2002)

  04 Oct 2002; Nick Hadaway <raker@gentoo.org> wmfsm-0.34.ebuild,