@@ -1,0 +1,38 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmfsm/wmfsm-0.35.ebuild,v 1.1 2015/04/17 11:31:20 voyageur Exp $
+
+EAPI=5
+
+inherit autotools
+
+IUSE=""
+DESCRIPTION="dockapp for monitoring filesystem usage"
+HOMEPAGE="http://windowmaker.org/dockapps/?name=wmfsm"
+# Grab from http://windowmaker.org/dockapps/?download=${P}.tar.gz
+SRC_URI="http://dev.gentoo.org/~voyageur/distfiles/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+
+RDEPEND="x11-libs/libX11
+	x11-libs/libXext
+	x11-libs/libXt
+	x11-libs/libXpm"
+DEPEND="${RDEPEND}
+	x11-proto/xproto
+	x11-proto/xextproto"
+
+S=${WORKDIR}/dockapps
+
+src_prepare() {
+	sed -e "/^X11LIBS/s/-I$x_includes //" -i configure.ac || die "sed failed"
+
+	eautoreconf
+}
+
+src_install() {
+	emake DESTDIR="${D}" install
+	dodoc AUTHORS ChangeLog
+}
